--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@botbuildercommunity/adapter-twilio-whatsapp": "^1.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "socket.io": "^4.7.2",
     "twilio": "^4.17.0"
   }
