--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@botbuildercommunity/adapter-twilio-whatsapp": "^1.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.8",
     "socket.io": "^4.7.2",
     "twilio": "^4.17.0"
   }
